# telefly-iii

./: .gitignore  .pylintrc  Dockerfile  LICENSE  README.md  pyproject.toml
config/: telefly-iii.ini.default
telefly_iii/: __main__.py  bot.py
