[tool.poetry]
name = "telefly-iii"
version = "0.1.0"
description = "Telefly III - A Telegram bot for Firefly III"
authors = ["Oleksii Serdiuk <contacts@oleksii.name>"]
homepage = "https://github.com/leppa/telefly-iii"
repository = "https://github.com/leppa/telefly-iii.git"
license = "BSD-3-Clause"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Topic :: Communications :: Chat",
    "Topic :: Utilities"
]

[tool.poetry.dependencies]
python = "^3.7"
python-telegram-bot = "^12.8"
firefly-iii-api-client = "^1.2.0"
requests = "^2.24.0"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
black = "^19.10b0"
pylint = "^2.5.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
